fixed some spacing on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .head {
   text-align: center;
   opacity: 70%;
-  font-size: 60px;
+  font-size: 5vh;
 }
 
 .bulb-switch-container {
